# yjy_6081

./: .gitignore  controller_node.yaml  mode_node.yaml  run.sh  run1.sh  sim.conf
20260112全信/: ModifyAndDump.py  alarm.py  alarm_sound_simple.py  config.json  config.yaml  fence_proc.py  ship_info_system.py  test.py
HaiTub/: GPATH.txt  app.js  app1.js  app2.js  package-lock.json  package.json
PBF/: config.json
configs/autostart/: gnome-terminal.desktop  tileserver-gl.desktop
configs/nginx/: haituf_8899
configs/systemd/: pm2-ship6081.service  ros2_autostart.service  simplelauncher.service
control_ws/src/control/: CMakeLists.txt  package.xml
control_ws/src/control/include/: convert.hpp  mpc.hpp
control_ws/src/control/src/: controller.cpp  mode.cpp
control_ws/src/data/: CMakeLists.txt  package.xml
control_ws/src/data/src/: data.cpp
control_ws/src/message/: CMakeLists.txt  package.xml
control_ws/src/message/msg/: ControlObjective.msg  ControllerOutput.msg  NaviMode.msg  ShipState.msg
control_ws/src/model/: CMakeLists.txt  package.xml
control_ws/src/model/src/: model.cpp
control_ws/src/plot/: CMakeLists.txt  package.xml
control_ws/src/plot/src/: plot.cpp
control_ws/src/rudder/: CMakeLists.txt  package.xml
control_ws/src/rudder/include/: pid.hpp  redis_utils.hpp
control_ws/src/rudder/src/: rudder_control(udp).cpp  rudder_control.cpp
control_ws/src/sim/: CMakeLists.txt  package.xml
control_ws/src/sim/src/: sim.cpp
control_ws/src/startup/: CMakeLists.txt  package.xml
control_ws/src/startup/launch/: node_launch.py
haituf_frontend/: 1_shilliang.html  1_shilliang1130.html  1_shilliang20260128.html  1_shilliang20260225.css  1_shilliang_1.html  68877_0507.html  7618F04387FAA49C07C156B963C62453.html  C1513391.000soundings.txt  C1513391output.geojson  C16A4292.000  GPATH.txt  app.js  autofit-responsive.js  function.html  home.html  index - 副本.html  index.html  index_test.html  island_names.txt  node安装.txt  nohup.out  output.geojson  package-lock.json  package.json  road.html  run.Md  run1.sh  run2.sh  run3.sh  shipDraw.html  style.json  sw.js  xianghuwapian.html  作废简化_buoys_geojson.txt  展台.html  新建 文本文档.txt  海工版本.html  瓦片杭州.html  矢量web海图7月.html  矢量web海图8月.html  (+5 more)
haituf_frontend/asserts/img/: Untitled
module/: launch.conf
module/neuAPFFollow_6081/: Autonomous_Following_with_Redis.py  Autonomous_Following_with_Redis.spec  algo_utility.py  ca_main.py  collision_avoidance.py  follow.spec  ip_bezier_path.py  ip_is_intersecting_line_segment.py  ip_transform.py  para.py  plotting.py  redis_interface.py
module/neuAPF_6081_new/: algo_utility.py  apf.py  ca_main.py  ca_main.spec  collision_avoidance.py  new_alarm.py  para.py  redis_interface.py
module/neuAPF_6081_old/: ca_main.py  ca_ms.spec  ca_rpm.spec  collision_avoidance.py  ownship.py  redis_interface.py
module/pathplanning/data/: global_grid_map.npz
module/pathplanning/data_weather/: global_grid_map.npz  high_risk_wave_region.pkl  high_risk_wind_region.pkl
